compiler/testData/diagnostics/testsWithStdLib/contracts/dsl/errors/emptyContract.kt
// !LANGUAGE: +AllowContractsForCustomFunctions +UseReturnsEffect
// !USE_EXPERIMENTAL: kotlin.contracts.ExperimentalContracts
// !DIAGNOSTICS: -INVISIBLE_REFERENCE -INVISIBLE_MEMBER

import kotlin.contracts.*

fun emptyContract() {
    <!ERROR_IN_CONTRACT_DESCRIPTION(Error in contract description)!>contract<!> { }
}